added bondret and gurkaynak et al 2007

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -764,7 +764,7 @@
     "\n",
     "    # size \n",
     "    out['stock_price'] = np.abs(df['prcc_f'])\n",
-    "    out['lag_at'] = pdm.lag(df['at'])\n",
+    "    out['lag_at'] = pdm.lag(df[['at']])\n",
     "    out['mktcap'] = out['stock_price'] * df['csho']\n",
     "\n",
     "    # book equity vars\n",
