--- a/nbs/fetch_tools.ipynb
+++ b/nbs/fetch_tools.ipynb
@@ -56,23 +56,30 @@
     "def get_text_file_from_url (url, #Data at this url must be readable with pandas.read_csv\n",
     "             nrows: int=None, #Get only the first `nrows` from the file. If None, gets the entire file\n",
     "             delimiter: str=',',\n",
+    "             headers: dict=None, #Headers to pass to the request\n",
+    "             skiprows: int=None, #Skip the first `skiprows` rows\n",
+    "             encoding: str='utf-8', #Encoding to use when reading the file\n",
     "             **pd_read_csv_kwargs,\n",
     "    ) -> pd.DataFrame:\n",
     "    \"Gets the first `nrows` from the file found at `url`. Data at `url` must be separated by `delimiter` and be readable by pandas.read_csv\"\n",
-    "    \n",
-    "    if nrows is not None:\n",
-    "        response = requests.get(url, stream=True)\n",
+    "\n",
+    "\n",
+    "    if nrows is None:\n",
+    "        response = requests.get(url, headers=headers)\n",
     "        response.raise_for_status()\n",
+    "        data = response.content.decode(encoding)\n",
+    "        return pd.read_csv(StringIO(data), delimiter=delimiter, skiprows=skiprows, **pd_read_csv_kwargs)\n",
     "\n",
-    "        lines = []\n",
-    "        for i, line in enumerate(response.iter_lines(decode_unicode=True)):\n",
-    "            if i >= nrows: break\n",
-    "            lines.append(line)\n",
-    "        partial_csv = '\\n'.join(lines)\n",
-    "\n",
-    "        return pd.read_csv(StringIO(partial_csv), delimiter=delimiter, **pd_read_csv_kwargs)\n",
-    "\n",
-    "    return pd.read_csv(url, delimiter=delimiter,  **pd_read_csv_kwargs)\n"
+    "    response = requests.get(url, stream=True, headers=headers)\n",
+    "    response.raise_for_status()\n",
+    "    if skiprows is not None: nrows += skiprows\n",
+    "    lines = []\n",
+    "    for i, line in enumerate(response.iter_lines()):\n",
+    "        if skiprows is not None and i < skiprows: continue\n",
+    "        if i >= nrows: break\n",
+    "        lines.append(line.decode(encoding))\n",
+    "    data = '\\n'.join(lines)\n",
+    "    return pd.read_csv(StringIO(data), delimiter=delimiter, **pd_read_csv_kwargs)\n"
    ]
   },
   {
