--- a/nbs/01_wrds/07_bondret.ipynb
+++ b/nbs/01_wrds/07_bondret.ipynb
@@ -57,7 +57,7 @@
     "FREQ = 'M'\n",
     "MIN_YEAR = 2002\n",
     "MAX_YEAR = None\n",
-    "ENTITY_ID_IN_RAW_DSET = 'cusip'\n",
+    "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'date'\n",
     "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
@@ -255,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.price_eom,a.remcoups,a.cusip,a.coupon,a.yield,a.ret_eom,a.amount_outstanding,a.principal_amt,a.maturity,a.date,a.ncoups'"
+       "'a.ncoups,a.amount_outstanding,a.yield,a.remcoups,a.ret_eom,a.date,a.cusip,a.principal_amt,a.price_eom,a.coupon,a.maturity'"
       ]
      },
      "execution_count": null,
@@ -340,15 +340,15 @@
        "      <th>permco</th>\n",
        "      <th>cusip</th>\n",
        "      <th>date</th>\n",
-       "      <th>price_eom</th>\n",
-       "      <th>remcoups</th>\n",
-       "      <th>coupon</th>\n",
-       "      <th>yield</th>\n",
-       "      <th>ret_eom</th>\n",
-       "      <th>amount_outstanding</th>\n",
-       "      <th>principal_amt</th>\n",
-       "      <th>maturity</th>\n",
        "      <th>ncoups</th>\n",
+       "      <th>amount_outstanding</th>\n",
+       "      <th>yield</th>\n",
+       "      <th>remcoups</th>\n",
+       "      <th>ret_eom</th>\n",
+       "      <th>principal_amt</th>\n",
+       "      <th>price_eom</th>\n",
+       "      <th>coupon</th>\n",
+       "      <th>maturity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -358,7 +358,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, cusip, date, price_eom, remcoups, coupon, yield, ret_eom, amount_outstanding, principal_amt, maturity, ncoups]\n",
+       "Columns: [permno, permco, cusip, date, ncoups, amount_outstanding, yield, remcoups, ret_eom, principal_amt, price_eom, coupon, maturity]\n",
        "Index: []"
       ]
      },
@@ -370,6 +370,224 @@
    "source": [
     "#| eval: false\n",
     "raw.head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def process_raw_data(\n",
+    "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns   \n",
+    "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
+    "\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['permno','permco']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    for col in ['cusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    # Set up panel structure\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, panel_ids_toint=False, **clean_kwargs)\n",
+    "    return df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "df_clean = process_raw_data(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>dtdate</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>ncoups</th>\n",
+       "      <th>amount_outstanding</th>\n",
+       "      <th>yield</th>\n",
+       "      <th>remcoups</th>\n",
+       "      <th>ret_eom</th>\n",
+       "      <th>principal_amt</th>\n",
+       "      <th>price_eom</th>\n",
+       "      <th>coupon</th>\n",
+       "      <th>maturity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>permno</th>\n",
+       "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">26403</th>\n",
+       "      <th>2002-07</th>\n",
+       "      <td>2002-07-31</td>\n",
+       "      <td>2002-07-31</td>\n",
+       "      <td>20587</td>\n",
+       "      <td>00072AAA8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59905.0</td>\n",
+       "      <td>0.063246</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>117.597667</td>\n",
+       "      <td>9.645</td>\n",
+       "      <td>2009-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-08</th>\n",
+       "      <td>2002-08-31</td>\n",
+       "      <td>2002-08-31</td>\n",
+       "      <td>20587</td>\n",
+       "      <td>00072AAA8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59905.0</td>\n",
+       "      <td>0.061086</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.015265</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>118.601000</td>\n",
+       "      <td>9.645</td>\n",
+       "      <td>2009-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-10</th>\n",
+       "      <td>2002-10-31</td>\n",
+       "      <td>2002-10-31</td>\n",
+       "      <td>20587</td>\n",
+       "      <td>00072AAA8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59905.0</td>\n",
+       "      <td>0.068340</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>114.125000</td>\n",
+       "      <td>9.645</td>\n",
+       "      <td>2009-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-11</th>\n",
+       "      <td>2002-11-30</td>\n",
+       "      <td>2002-11-30</td>\n",
+       "      <td>20587</td>\n",
+       "      <td>00072AAA8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59905.0</td>\n",
+       "      <td>0.056472</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.062946</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>120.644000</td>\n",
+       "      <td>9.645</td>\n",
+       "      <td>2009-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-02</th>\n",
+       "      <td>2003-02-28</td>\n",
+       "      <td>2003-02-28</td>\n",
+       "      <td>20587</td>\n",
+       "      <td>00072AAA8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59905.0</td>\n",
+       "      <td>0.052255</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>122.421000</td>\n",
+       "      <td>9.645</td>\n",
+       "      <td>2009-02-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date     dtdate permco      cusip  ncoups  \\\n",
+       "permno Mdate                                                      \n",
+       "26403  2002-07  2002-07-31 2002-07-31  20587  00072AAA8     2.0   \n",
+       "       2002-08  2002-08-31 2002-08-31  20587  00072AAA8     2.0   \n",
+       "       2002-10  2002-10-31 2002-10-31  20587  00072AAA8     2.0   \n",
+       "       2002-11  2002-11-30 2002-11-30  20587  00072AAA8     2.0   \n",
+       "       2003-02  2003-02-28 2003-02-28  20587  00072AAA8     2.0   \n",
+       "\n",
+       "                amount_outstanding     yield  remcoups   ret_eom  \\\n",
+       "permno Mdate                                                       \n",
+       "26403  2002-07             59905.0  0.063246      14.0       NaN   \n",
+       "       2002-08             59905.0  0.061086      13.0  0.015265   \n",
+       "       2002-10             59905.0  0.068340      13.0       NaN   \n",
+       "       2002-11             59905.0  0.056472      13.0  0.062946   \n",
+       "       2003-02             59905.0  0.052255      12.0       NaN   \n",
+       "\n",
+       "                principal_amt   price_eom  coupon    maturity  \n",
+       "permno Mdate                                                   \n",
+       "26403  2002-07         1000.0  117.597667   9.645  2009-02-15  \n",
+       "       2002-08         1000.0  118.601000   9.645  2009-02-15  \n",
+       "       2002-10         1000.0  114.125000   9.645  2009-02-15  \n",
+       "       2002-11         1000.0  120.644000   9.645  2009-02-15  \n",
+       "       2003-02         1000.0  122.421000   9.645  2009-02-15  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df_clean.head()"
    ]
   },
   {
