added process_raw_data to gurkaynak etal

--- a/nbs/02_papers/gurkaynak_et_al_2007.ipynb
+++ b/nbs/02_papers/gurkaynak_et_al_2007.ipynb
@@ -65,7 +65,7 @@
     "FREQ = 'D'\n",
     "MIN_YEAR = 1961\n",
     "MAX_YEAR = None\n",
-    "TIME_VAR_IN_RAW_DSET = 'date'\n",
+    "TIME_VAR_IN_RAW_DSET = 'Date'\n",
     "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
@@ -739,14 +739,175 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def process_raw_data(df: pd.DataFrame=None\n",
+    "                     ) -> pd.DataFrame:\n",
+    "    \n",
+    "    return pdm.setup_tseries(df, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>dtdate</th>\n",
+       "      <th>BETA0</th>\n",
+       "      <th>BETA1</th>\n",
+       "      <th>BETA2</th>\n",
+       "      <th>BETA3</th>\n",
+       "      <th>SVEN1F01</th>\n",
+       "      <th>SVEN1F04</th>\n",
+       "      <th>SVEN1F09</th>\n",
+       "      <th>SVENF01</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SVENY23</th>\n",
+       "      <th>SVENY24</th>\n",
+       "      <th>SVENY25</th>\n",
+       "      <th>SVENY26</th>\n",
+       "      <th>SVENY27</th>\n",
+       "      <th>SVENY28</th>\n",
+       "      <th>SVENY29</th>\n",
+       "      <th>SVENY30</th>\n",
+       "      <th>TAU1</th>\n",
+       "      <th>TAU2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ddate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1961-06-14</th>\n",
+       "      <td>1961-06-14</td>\n",
+       "      <td>1961-06-14</td>\n",
+       "      <td>3.917606</td>\n",
+       "      <td>-1.277955</td>\n",
+       "      <td>-1.949397</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.8067</td>\n",
+       "      <td>3.9562</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5492</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.339218</td>\n",
+       "      <td>-999.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-06-15</th>\n",
+       "      <td>1961-06-15</td>\n",
+       "      <td>1961-06-15</td>\n",
+       "      <td>3.978498</td>\n",
+       "      <td>-1.257404</td>\n",
+       "      <td>-2.247617</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.8694</td>\n",
+       "      <td>4.0183</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5997</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.325775</td>\n",
+       "      <td>-999.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 101 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Date     dtdate     BETA0     BETA1     BETA2  BETA3  \\\n",
+       "Ddate                                                                    \n",
+       "1961-06-14  1961-06-14 1961-06-14  3.917606 -1.277955 -1.949397      0   \n",
+       "1961-06-15  1961-06-15 1961-06-15  3.978498 -1.257404 -2.247617      0   \n",
+       "\n",
+       "            SVEN1F01  SVEN1F04  SVEN1F09  SVENF01  ...  SVENY23  SVENY24  \\\n",
+       "Ddate                                              ...                     \n",
+       "1961-06-14    3.8067    3.9562       NaN   3.5492  ...      NaN      NaN   \n",
+       "1961-06-15    3.8694    4.0183       NaN   3.5997  ...      NaN      NaN   \n",
+       "\n",
+       "            SVENY25  SVENY26  SVENY27  SVENY28  SVENY29  SVENY30      TAU1  \\\n",
+       "Ddate                                                                        \n",
+       "1961-06-14      NaN      NaN      NaN      NaN      NaN      NaN  0.339218   \n",
+       "1961-06-15      NaN      NaN      NaN      NaN      NaN      NaN  0.325775   \n",
+       "\n",
+       "              TAU2  \n",
+       "Ddate               \n",
+       "1961-06-14 -999.99  \n",
+       "1961-06-15 -999.99  \n",
+       "\n",
+       "[2 rows x 101 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "clean = process_raw_data(raw)\n",
+    "clean"
+   ]
   },
   {
    "cell_type": "code",
