in process_raw_data in bondret, we do not drop duplicate permnos because we have multiple cusips per permno

--- a/nbs/01_wrds/07_bondret.ipynb
+++ b/nbs/01_wrds/07_bondret.ipynb
@@ -395,7 +395,11 @@
     "            df[col] = df[col].astype('string').astype('category')\n",
     "\n",
     "    # Set up panel structure\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, panel_ids_toint=False, **clean_kwargs)\n",
+    "    df = pdm.setup_panel(df, \n",
+    "                         drop_index_duplicates=False, # Multiple bonds (cusips) per permno per date\n",
+    "                         panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
+    "                         panel_ids_toint=False, \n",
+    "                         **clean_kwargs)\n",
     "    return df "
    ]
   },
