updated fred.process_raw_data to have no side effects

--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -48,6 +48,7 @@
     "#| exports\n",
     "from typing import List, Dict\n",
     "import time\n",
+    "import copy\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -689,6 +690,7 @@
     ") -> pd.DataFrame: \n",
     "    \"\"\"Processes data from FRED: cleans the date and sets it as index using `pdm.setup_tseries`\"\"\"\n",
     "\n",
+    "    data = copy.deepcopy(data)\n",
     "    out = {'info': data['info']}\n",
     "    data.pop('info')  \n",
     "    for freq, df in data.items():  \n",
