added dickerson_etal_2023 module

--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -379,6 +379,7 @@
    "source": [
     "#| export\n",
     "def ibes_ticker_permno(nrows: int=None):\n",
+    "    limit_clause = ''\n",
     "    if nrows is not None: limit_clause = f' LIMIT {nrows}'\n",
     "    return wrds_api.download('SELECT * FROM wrdsapps_link_crsp_ibes.ibcrsphist' + limit_clause)"
    ]
@@ -454,6 +455,108 @@
    "source": [
     "#| eval: false\n",
     "ibes_permnos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging TRACE Bond Data with CRSP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "def bond_cusip_permno(nrows: int=None):\n",
+    "    limit_clause = ''\n",
+    "    if nrows is not None: limit_clause = f' LIMIT {nrows}'\n",
+    "    return wrds_api.download('SELECT * FROM wrdsapps.bondcrsp_link' + limit_clause)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "cusip_permnos = bond_cusip_permno(nrows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>permno</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>trace_startdt</th>\n",
+       "      <th>trace_enddt</th>\n",
+       "      <th>crsp_startdt</th>\n",
+       "      <th>crsp_enddt</th>\n",
+       "      <th>link_startdt</th>\n",
+       "      <th>link_enddt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000336AC1</td>\n",
+       "      <td>60687</td>\n",
+       "      <td>21372</td>\n",
+       "      <td>2014-08-22</td>\n",
+       "      <td>2014-08-22</td>\n",
+       "      <td>2002-01-02</td>\n",
+       "      <td>2022-12-30</td>\n",
+       "      <td>2014-08-22</td>\n",
+       "      <td>2014-08-22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cusip  permno  permco trace_startdt trace_enddt crsp_startdt  \\\n",
+       "0  000336AC1   60687   21372    2014-08-22  2014-08-22   2002-01-02   \n",
+       "\n",
+       "   crsp_enddt link_startdt  link_enddt  \n",
+       "0  2022-12-30   2014-08-22  2014-08-22  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "cusip_permnos"
    ]
   },
   {
