--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -354,7 +354,7 @@
    "source": [
     "#| export\n",
     "def process_raw_data(\n",
-    "        df: pd.DataFrame=None, # If None, will download using `download_raw`\n",
+    "        df: pd.DataFrame=None, # Raw data\n",
     "        gvkey_permno_link: bool|pd.DataFrame=True, # Whether to download permno or not. If DataFrame, must contain `permno`, `gvkey`, and `Qdate`\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Converts `gvkey` to string and applies `pandasmore.setup_panel`. Adds `permno` if `gvkey_permno_link` is not False.\"\"\"\n",
@@ -379,14 +379,16 @@
     "                        drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    \n",
     "    if not gvkey_permno_link: return df\n",
-    "    else:    \n",
-    "      if gvkey_permno_link is True: gvkey_permno_link = wrds.linking.gvkey_permno_q()\n",
-    "      gvkey_permno_link['gvkey'] = gvkey_permno_link['gvkey'].astype('string').astype('category') \n",
-    "      df = df.reset_index().merge(gvkey_permno_link, how='inner', on=['gvkey','Qdate'])\n",
-    "      df['permno'] = df['permno'].astype('Int64').astype('category')\n",
-    "      return pdm.setup_panel(df, panel_ids='permno', dates_processed=True, freq='Q',\n",
-    "                                panel_ids_toint=False,\n",
-    "                                drop_index_duplicates=True, duplicates_which_keep='last')"
+    "\n",
+    "    if gvkey_permno_link is True: gvkey_permno_link = wrds.linking.gvkey_permno_q()\n",
+    "    \n",
+    "    gvkey_permno_link['gvkey'] = gvkey_permno_link['gvkey'].astype('string').astype('category') \n",
+    "    df = df.reset_index().merge(gvkey_permno_link, how='inner', on=['gvkey','Qdate'])\n",
+    "    df['permno'] = df['permno'].astype('Int64').astype('category')\n",
+    "\n",
+    "    return pdm.setup_panel(df, panel_ids='permno', dates_processed=True, freq='Q',\n",
+    "                            panel_ids_toint=False,\n",
+    "                            drop_index_duplicates=True, duplicates_which_keep='last')"
    ]
   },
   {
