deleted default_vars from wrds.bondret

--- a/nbs/01_wrds/07_bondret.ipynb
+++ b/nbs/01_wrds/07_bondret.ipynb
@@ -190,36 +190,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def default_raw_vars():\n",
-    "    \"\"\"Defines default variables used in `get_raw_data` if none are specified.\"\"\"\n",
-    "\n",
-    "    return ['date','cusip','maturity', 'ncoups', 'price_eom', 'ret_eom', 'yield', 'coupon', 'remcoups', 'amount_outstanding', 'principal_amt']            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['date', 'cusip', 'maturity', 'ncoups', 'price_eom', 'ret_eom', 'yield', 'coupon', 'remcoups', 'amount_outstanding', 'principal_amt']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(default_raw_vars())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
     "def parse_varlist(vars: List[str]=None,\n",
     "                  required_vars = [],\n",
     "                  ) -> str:\n",
@@ -230,10 +200,9 @@
     "    all_avail_vars = list_all_vars().drop_duplicates(subset='name',keep='first').copy()\n",
     "    all_avail_vars['w_prefix'] = all_avail_vars.apply(lambda row: suffix_mapping[row['wrds_table']] + row['name'] , axis=1)\n",
     "\n",
-    "    if vars == '*': return ','.join(list(all_avail_vars['w_prefix']))\n",
+    "    if vars == '*' or vars is None: return ','.join(list(all_avail_vars['w_prefix']))\n",
     "    \n",
     "    # Add required vars to requested vars\n",
-    "    if vars is None: vars = default_raw_vars()\n",
     "    vars_to_get =  required_vars + [x for x in list(set(vars)) if x not in required_vars]\n",
     "\n",
     "    # Validate variables to be downloaded (make sure that they are in the target database)\n",
@@ -255,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.ncoups,a.amount_outstanding,a.yield,a.remcoups,a.ret_eom,a.date,a.cusip,a.principal_amt,a.price_eom,a.coupon,a.maturity'"
+       "'a.date,a.issue_id,a.cusip,a.bond_sym_id,a.bsym,a.isin,a.company_symbol,a.bond_type,a.security_level,a.conv,a.offering_date,a.offering_amt,a.offering_price,a.principal_amt,a.maturity,a.treasury_maturity,a.coupon,a.day_count_basis,a.dated_date,a.first_interest_date,a.last_interest_date,a.ncoups,a.amount_outstanding,a.r_sp,a.r_mr,a.r_fr,a.n_sp,a.n_mr,a.n_fr,a.rating_num,a.rating_cat,a.rating_class,a.t_date,a.t_volume,a.t_dvolume,a.t_spread,a.t_yld_pt,a.yield,a.price_eom,a.price_ldm,a.price_l5m,a.gap,a.coupmonth,a.nextcoup,a.coupamt,a.coupacc,a.multicoups,a.ret_eom,a.ret_ldm,a.ret_l5m,a.tmt,a.remcoups,a.duration,a.defaulted,a.default_date,a.default_type,a.reinstated,a.reinstated_date'"
       ]
      },
      "execution_count": null,
@@ -276,7 +245,7 @@
    "source": [
     "#| export\n",
     "def get_raw_data(\n",
-    "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
+    "        vars: List[str]='*', # Downloads all available variables by defaul\n",
     "        required_vars: List[str]=['cusip','date'], #list of variables that will get downloaded, even if not in `vars`\n",
     "        nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "        start_date: str=None, # Start date in MM/DD/YYYY format\n",
@@ -338,28 +307,39 @@
        "      <th></th>\n",
        "      <th>permno</th>\n",
        "      <th>permco</th>\n",
-       "      <th>cusip</th>\n",
        "      <th>date</th>\n",
-       "      <th>ncoups</th>\n",
-       "      <th>amount_outstanding</th>\n",
-       "      <th>yield</th>\n",
+       "      <th>issue_id</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>bond_sym_id</th>\n",
+       "      <th>bsym</th>\n",
+       "      <th>isin</th>\n",
+       "      <th>company_symbol</th>\n",
+       "      <th>bond_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ret_ldm</th>\n",
+       "      <th>ret_l5m</th>\n",
+       "      <th>tmt</th>\n",
        "      <th>remcoups</th>\n",
-       "      <th>ret_eom</th>\n",
-       "      <th>principal_amt</th>\n",
-       "      <th>price_eom</th>\n",
-       "      <th>coupon</th>\n",
-       "      <th>maturity</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>defaulted</th>\n",
+       "      <th>default_date</th>\n",
+       "      <th>default_type</th>\n",
+       "      <th>reinstated</th>\n",
+       "      <th>reinstated_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>0 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, cusip, date, ncoups, amount_outstanding, yield, remcoups, ret_eom, principal_amt, price_eom, coupon, maturity]\n",
-       "Index: []"
+       "Columns: [permno, permco, date, issue_id, cusip, bond_sym_id, bsym, isin, company_symbol, bond_type, security_level, conv, offering_date, offering_amt, offering_price, principal_amt, maturity, treasury_maturity, coupon, day_count_basis, dated_date, first_interest_date, last_interest_date, ncoups, amount_outstanding, r_sp, r_mr, r_fr, n_sp, n_mr, n_fr, rating_num, rating_cat, rating_class, t_date, t_volume, t_dvolume, t_spread, t_yld_pt, yield, price_eom, price_ldm, price_l5m, gap, coupmonth, nextcoup, coupamt, coupacc, multicoups, ret_eom, ret_ldm, ret_l5m, tmt, remcoups, duration, defaulted, default_date, default_type, reinstated, reinstated_date]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 60 columns]"
       ]
      },
      "execution_count": null,
@@ -443,20 +423,36 @@
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
        "      <th>permco</th>\n",
+       "      <th>issue_id</th>\n",
        "      <th>cusip</th>\n",
-       "      <th>ncoups</th>\n",
-       "      <th>amount_outstanding</th>\n",
-       "      <th>yield</th>\n",
+       "      <th>bond_sym_id</th>\n",
+       "      <th>bsym</th>\n",
+       "      <th>isin</th>\n",
+       "      <th>company_symbol</th>\n",
+       "      <th>bond_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ret_ldm</th>\n",
+       "      <th>ret_l5m</th>\n",
+       "      <th>tmt</th>\n",
        "      <th>remcoups</th>\n",
-       "      <th>ret_eom</th>\n",
-       "      <th>principal_amt</th>\n",
-       "      <th>price_eom</th>\n",
-       "      <th>coupon</th>\n",
-       "      <th>maturity</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>defaulted</th>\n",
+       "      <th>default_date</th>\n",
+       "      <th>default_type</th>\n",
+       "      <th>reinstated</th>\n",
+       "      <th>reinstated_date</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -479,109 +475,160 @@
        "      <td>2002-07-31</td>\n",
        "      <td>2002-07-31</td>\n",
        "      <td>20587</td>\n",
+       "      <td>383238.0</td>\n",
        "      <td>00072AAA8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59905.0</td>\n",
-       "      <td>0.063246</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>DIS.GA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US00072AAA88</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>CDEB</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>117.597667</td>\n",
-       "      <td>9.645</td>\n",
-       "      <td>2009-02-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.641667</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>4.797721</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2002-08</th>\n",
        "      <td>2002-08-31</td>\n",
        "      <td>2002-08-31</td>\n",
        "      <td>20587</td>\n",
+       "      <td>383238.0</td>\n",
        "      <td>00072AAA8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59905.0</td>\n",
-       "      <td>0.061086</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>DIS.GA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US00072AAA88</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>CDEB</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.015265</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>118.601000</td>\n",
-       "      <td>9.645</td>\n",
-       "      <td>2009-02-15</td>\n",
+       "      <td>6.555556</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>4.928041</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2002-10</th>\n",
        "      <td>2002-10-31</td>\n",
        "      <td>2002-10-31</td>\n",
        "      <td>20587</td>\n",
+       "      <td>383238.0</td>\n",
        "      <td>00072AAA8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59905.0</td>\n",
-       "      <td>0.068340</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>DIS.GA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US00072AAA88</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>CDEB</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>114.125000</td>\n",
-       "      <td>9.645</td>\n",
-       "      <td>2009-02-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.386111</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>4.721617</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2002-11</th>\n",
        "      <td>2002-11-30</td>\n",
        "      <td>2002-11-30</td>\n",
        "      <td>20587</td>\n",
+       "      <td>383238.0</td>\n",
        "      <td>00072AAA8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59905.0</td>\n",
-       "      <td>0.056472</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>DIS.GA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US00072AAA88</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>CDEB</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.062946</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>120.644000</td>\n",
-       "      <td>9.645</td>\n",
-       "      <td>2009-02-15</td>\n",
+       "      <td>6.302778</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>4.714069</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2003-02</th>\n",
        "      <td>2003-02-28</td>\n",
        "      <td>2003-02-28</td>\n",
        "      <td>20587</td>\n",
+       "      <td>383238.0</td>\n",
        "      <td>00072AAA8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59905.0</td>\n",
-       "      <td>0.052255</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>DIS.GA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US00072AAA88</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>CDEB</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>122.421000</td>\n",
-       "      <td>9.645</td>\n",
-       "      <td>2009-02-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.052778</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.673783</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      date     dtdate permco      cusip  ncoups  \\\n",
-       "permno Mdate                                                      \n",
-       "26403  2002-07  2002-07-31 2002-07-31  20587  00072AAA8     2.0   \n",
-       "       2002-08  2002-08-31 2002-08-31  20587  00072AAA8     2.0   \n",
-       "       2002-10  2002-10-31 2002-10-31  20587  00072AAA8     2.0   \n",
-       "       2002-11  2002-11-30 2002-11-30  20587  00072AAA8     2.0   \n",
-       "       2003-02  2003-02-28 2003-02-28  20587  00072AAA8     2.0   \n",
+       "                      date     dtdate permco  issue_id      cusip bond_sym_id  \\\n",
+       "permno Mdate                                                                    \n",
+       "26403  2002-07  2002-07-31 2002-07-31  20587  383238.0  00072AAA8      DIS.GA   \n",
+       "       2002-08  2002-08-31 2002-08-31  20587  383238.0  00072AAA8      DIS.GA   \n",
+       "       2002-10  2002-10-31 2002-10-31  20587  383238.0  00072AAA8      DIS.GA   \n",
+       "       2002-11  2002-11-30 2002-11-30  20587  383238.0  00072AAA8      DIS.GA   \n",
+       "       2003-02  2003-02-28 2003-02-28  20587  383238.0  00072AAA8      DIS.GA   \n",
        "\n",
-       "                amount_outstanding     yield  remcoups   ret_eom  \\\n",
-       "permno Mdate                                                       \n",
-       "26403  2002-07             59905.0  0.063246      14.0       NaN   \n",
-       "       2002-08             59905.0  0.061086      13.0  0.015265   \n",
-       "       2002-10             59905.0  0.068340      13.0       NaN   \n",
-       "       2002-11             59905.0  0.056472      13.0  0.062946   \n",
-       "       2003-02             59905.0  0.052255      12.0       NaN   \n",
+       "                bsym          isin company_symbol bond_type  ... ret_ldm  \\\n",
+       "permno Mdate                                                 ...           \n",
+       "26403  2002-07  None  US00072AAA88            DIS      CDEB  ...     NaN   \n",
+       "       2002-08  None  US00072AAA88            DIS      CDEB  ...     NaN   \n",
+       "       2002-10  None  US00072AAA88            DIS      CDEB  ...     NaN   \n",
+       "       2002-11  None  US00072AAA88            DIS      CDEB  ...     NaN   \n",
+       "       2003-02  None  US00072AAA88            DIS      CDEB  ...     NaN   \n",
        "\n",
-       "                principal_amt   price_eom  coupon    maturity  \n",
-       "permno Mdate                                                   \n",
-       "26403  2002-07         1000.0  117.597667   9.645  2009-02-15  \n",
-       "       2002-08         1000.0  118.601000   9.645  2009-02-15  \n",
-       "       2002-10         1000.0  114.125000   9.645  2009-02-15  \n",
-       "       2002-11         1000.0  120.644000   9.645  2009-02-15  \n",
-       "       2003-02         1000.0  122.421000   9.645  2009-02-15  "
+       "                 ret_l5m       tmt  remcoups  duration  defaulted  \\\n",
+       "permno Mdate                                                        \n",
+       "26403  2002-07       NaN  6.641667      14.0  4.797721          N   \n",
+       "       2002-08  0.015265  6.555556      13.0  4.928041          N   \n",
+       "       2002-10       NaN  6.386111      13.0  4.721617          N   \n",
+       "       2002-11  0.062946  6.302778      13.0  4.714069          N   \n",
+       "       2003-02       NaN  6.052778      12.0  4.673783          N   \n",
+       "\n",
+       "               default_date default_type  reinstated reinstated_date  \n",
+       "permno Mdate                                                          \n",
+       "26403  2002-07         None         None        None            None  \n",
+       "       2002-08         None         None        None            None  \n",
+       "       2002-10         None         None        None            None  \n",
+       "       2002-11         None         None        None            None  \n",
+       "       2003-02         None         None        None            None  \n",
+       "\n",
+       "[5 rows x 60 columns]"
       ]
      },
      "execution_count": null,
