--- a/nbs/01_wrds/08_mergent.ipynb
+++ b/nbs/01_wrds/08_mergent.ipynb
@@ -36,9 +36,7 @@
     "from typing import List\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "import pandasmore as pdm\n",
     "from finsets.wrds import wrds_api"
    ]
   },
@@ -246,9 +244,9 @@
     "    \"\"\"Defines default variables used in `get_raw_data` if none are specified.\"\"\"\n",
     "\n",
     "    return ['offering_date', 'issue_id', 'issuer_id', 'issuer_cusip', 'issue_cusip', 'complete_cusip', 'isin', \n",
-    "            'security_level', 'coupon_type', 'convertible', 'foreign_currency', 'rule_144a', 'redeemable', 'bond_type', 'conv_commod_type',\n",
+    "            'security_level', 'coupon_type', 'convertible', 'foreign_currency', 'rule_144a', 'redeemable', 'bond_type', \n",
     "            'maturity', 'coupon', 'offering_amt', 'offering_price', 'principal_amt', 'defaulted',\n",
-    "            'day_count_basis', 'last_interest_date', 'first_interest_date',\n",
+    "            'day_count_basis', 'last_interest_date', 'first_interest_date', 'conv_commod_type',\n",
     "            'cusip_name','naics_code','sic_code', 'treasury_maturity', \n",
     "            'country_domicile',  'private_placement', 'asset_backed', 'interest_frequency','dated_date',\n",
     "            ]            "
@@ -335,7 +333,7 @@
     "#| export\n",
     "def get_raw_data(\n",
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
-    "        required_vars: List[str]=['offering_date','complete_cusip','issuer_id'], #list of variables that will get downloaded, even if not in `vars`\n",
+    "        required_vars: List[str]=['offering_date','complete_cusip','issuer_id'], #Will get downloaded, even if not in `vars`\n",
     "        nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "        start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None #End date in MM/DD/YYYY format\n",
@@ -346,7 +344,7 @@
     "    vars = parse_varlist(vars, required_vars=required_vars)\n",
     "\n",
     "    sql_string=f\"\"\"SELECT {vars}\n",
-    "                    FROM {LIBRARY}.{TABLE} AS a\n",
+    "            TSLA        FROM {LIBRARY}.{TABLE} AS a\n",
     "                    LEFT JOIN {LIBRARY}.{ISSUER_TABLE} AS b ON a.issuer_id = b.issuer_id\n",
     "                    WHERE 1=1\n",
     "                \"\"\"\n",
@@ -450,7 +448,6 @@
     "#| export\n",
     "def process_raw_data(\n",
     "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns   \n",
-    "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Mainly converts variables to categorical type to save memory.\"\"\"\n",
     "\n",
@@ -567,5 +564,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
