--- a/nbs/02_papers/dickerson_etal_2023.ipynb
+++ b/nbs/02_papers/dickerson_etal_2023.ipynb
@@ -62,7 +62,7 @@
     "PROVIDER = 'Alexander Dickerson, Philippe Mueller, Cesare Robotti, 2023'\n",
     "URL = 'https://openbondassetpricing.com/wp-content/uploads/2023/10/WRDS_MMN_Corrected_Data.csv.zip' #contains a gzip file inside a zip file\n",
     "GZ_FILE = 'WRDS_MMN_Corrected_Data.csv.gzip'\n",
-    "HOST_WEBSITE = 'https://www.firmlevelrisk.com/'\n",
+    "HOST_WEBSITE = 'https://openbondassetpricing.com/'\n",
     "FREQ = 'M'\n",
     "MIN_YEAR = 2002\n",
     "MAX_YEAR = None\n",
