can pass a single series as a string in fred

--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -161,6 +161,7 @@
     "    \"Splits `vars` by frequency and returns dict with one pd.DataFrame per frequency\"\n",
     "     \n",
     "    if vars is None: vars = default_raw_vars()\n",
+    "    if isinstance(vars, str): vars = [vars]\n",
     "\n",
     "    # Collect frequency data for all series\n",
     "    freq_store = []\n",
