--- a/nbs/02_papers/dickerson_etal_2023.ipynb
+++ b/nbs/02_papers/dickerson_etal_2023.ipynb
@@ -200,6 +200,10 @@
     "    if permno_to_bond_cusip is True: permno_to_bond_cusip = wrds.linking.bond_cusip_permno()\n",
     "\n",
     "    df = df.merge(permno_to_bond_cusip, on=['cusip'], how='left')\n",
+    "\n",
+    "    for col in ['permno','permco']:\n",
+    "        if col in df.columns: df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
     "    return df "
    ]
   },
