--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "It results in no `permno-datadate` duplicates, but there is a small number of `gvkey-datadate` duplicates (about 1% of the data) because each `permno` maps to a unique `gvkey+iid` value and some gvkeys have multiple share classes (different iid's). \n",
     "\n",
-    "If we restrict ourselves to primary securities, i.e. `linkprim in ('P','C')` (which retains 99% of the data), this results in unique `gvkey-datadate` records which is why we use it as the default option in the `process_raw_data` function."
+    "If we restrict ourselves to primary securities, i.e. `linkprim in ('P','C')` (which retains 99% of the data), this results in unique `gvkey-datadate` records which is why we use it as the default option in the `process_raw_data` function below."
    ]
   },
   {
