--- a/nbs/01_wrds/04_compq_ccm.ipynb
+++ b/nbs/01_wrds/04_compq_ccm.ipynb
@@ -798,7 +798,9 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Convert YTD variables to quarterly variables by taking the difference between the current and previous quarter.\"\"\"\n",
     "\n",
-    "    out = df.reset_index().set_index(['permno','Qdate_fiscal']).sort_index().copy()\n",
+    "    out = (df.reset_index().drop_duplicates(subset=['permno','Qdate_fiscal'])\n",
+    "           .set_index(['permno','Qdate_fiscal'])\n",
+    "           .sort_index().copy())\n",
     "\n",
     "    new_vars = []\n",
     "    for v in vars:\n",
@@ -900,6 +902,9 @@
     "    \"\"\"Computes a set of features from `df`\"\"\"\n",
     "    \n",
     "    # convert ytd variables to quarterly\n",
+    "    df = (df.reset_index().drop_duplicates(subset=['permno','Qdate_fiscal'])\n",
+    "           .set_index(['permno','Qdate'])\n",
+    "           .sort_index().copy())\n",
     "    out = ytd_to_quarterly(df, suffix='_q')\n",
     "\n",
     "    # industry \n",
